test/logicShortCircuit2.slq

def main() {
	x := false;
	y := H(0:B); // error
	z := dup(y);
	return (x && measure(y), H(z));
}
